Solo falta incluir parrafos comentados en secciones y repasar nomenclaturas nuevas

--- a/2_state_of_the_art/0_index.tex
+++ b/2_state_of_the_art/0_index.tex
@@ -523,13 +523,15 @@ En~\ref{tab:MetodosAuto} se indican los métodos, técnicas e instrumentos de ev
   \begin{center}
   \begin{tabular}{| m{3cm} | m{3cm} | m{3.5cm} | m{2cm} |} % {| m{2cm} | m{4.5cm} | m{3cm} | m{2.5cm} |}   
     \hline
-    MÉTODO DE EVALUACIÓN & TÉCNICA DE EVALUACIÓN & INSTRUMENTO DE EVALUACIÓN & TRABAJOS \\
+    MÉTODOS DE  & TÉCNICAS DE  & INSTRUMENTOS  & \multirow{2}{*}{TRABAJOS} \\
+    EVALUACIÓN & EVALUACIÓN & DE EVALUACIÓN &  \\
     \hline
     \hline
-    \multirow{3}{*}{Auténtica} & Actividades sin determinar  & - & \cite{renau2010teaching} \\
+    \multirow{4}{*}{Auténtica} & Actividades   & \multirow{2}{*}{-} & \multirow{2}{*}{\cite{renau2010teaching}} \\
+     & sin determinar  &  &  \\
     \cline{2-4}
      & \multirow{2}{3cm}{Observación sistemática} & \multirow{2}{*}{Rúbrica} & \multirow{2}{*}{\cite{oliver2013graduate}} \\
-     & &  &  \\
+     &  &  &  \\
     \hline
     \multirow{2}{*}{Formativa} & Pruebas escritas & Cuestionario & \cite{achcaoucaou2014competence}  \\
     \cline{2-4}
@@ -623,22 +625,26 @@ Dentro de la evaluación del profesor el método más seguido vuelve a ser la po
   \begin{center}
   \begin{tabular}{| m{3cm} | m{3cm} | m{3.5cm} | m{2cm} |}
     \hline
-    MÉTODO DE EVALUACIÓN & TÉCNICA DE EVALUACIÓN & INSTRUMENTO DE EVALUACIÓN & TRABAJOS \\
+    MÉTODOS DE  & TÉCNICAS DE  & INSTRUMENTOS  & \multirow{2}{*}{TRABAJOS} \\
+    EVALUACIÓN & EVALUACIÓN & DE EVALUACIÓN &  \\
     \hline
     \hline
-     Auténtica & \multirow{2}{3.5cm}{Actividades sin determinar} & \multirow{2}{*}{-}  & \cite{starcic2008sustaining} \\
+     Auténtica & \multirow{3}{3.5cm}{Actividades sin determinar} & \multirow{3}{*}{-}  & \cite{starcic2008sustaining} \\
     \cline{1-1} \cline{4-4}
-     Con referencia al criterio &  &   & \cite{serrano2013hiperion} \\
+     Con referencia &  &   & \multirow{2}{*}{\cite{serrano2013hiperion}} \\
+     al criterio &  &   &  \\
     \hline
-     \multirow{3}{*}{Formativa} & Pruebas orales & Entrevista & \cite{ward2011developing} \\
+     \multirow{4}{*}{Formativa} & Pruebas orales & Entrevista & \cite{ward2011developing} \\
     \cline{2-4}
-     & \multirow{3}{3.5cm}{Observación sistemática } & Herramienta de seguimiento & \cite{benlloch2007adapting,lacuesta2009active} \\
+     & \multirow{4}{3.5cm}{Observación sistemática } & \multirow{2}{3.5cm}{Herramienta de seguimiento} & \multirow{2}{*}{\cite{benlloch2007adapting,lacuesta2009active}} \\
+     &  &  & \\
     \cline{3-4}
       &  & \multirow{2}{*}{Rúbrica} & \cite{rodriguez2010portfolio} \\
     \cline{1-1} \cline{4-4}
-     \multirow{3}{*}{Sumativa} &    &  & \cite{aziz2007appraisal,martin2013acquired,rashid2008engineering} \\
+     \multirow{4}{*}{Sumativa} &    &  & \cite{aziz2007appraisal,martin2013acquired,rashid2008engineering} \\
     \cline{2-4}
-      & Actividades sin determinar & -  & \cite{yang2014fine} \\
+      & Actividades  & \multirow{2}{*}{-}  & \multirow{2}{*}{\cite{yang2014fine}} \\
+      &  sin determinar &   &  \\
     \cline{2-4}
       & Pruebas escritas & Cuestionario & \cite{vizcarro2013assessment} \\
     \hline
@@ -714,20 +720,21 @@ Se han utilizado tres métodos diferentes para la evaluación automática de com
 
 \begin{table}
   \begin{center}
-  \begin{tabular}{| c | m{3.5cm} | m{5cm} | m{4cm} |}
+  \begin{tabular}{| m{2.7cm} | m{2.9cm} | m{4cm} | m{2cm} |}
+    \hline 
+    MÉTODOS DE  & TÉCNICAS DE  & INSTRUMENTOS  & \multirow{2}{*}{TRABAJOS} \\
+    EVALUACIÓN & EVALUACIÓN & DE EVALUACIÓN &  \\
     \hline
-    TR. & MÉTODO & TÉCNICA & INSTRUMENTO DE EVAL. \\
     \hline
+    Auténtico  & \multirow{2}{3cm}{Indicadores basados en logros} & \multirow{2}{*}{Juegos serios} & \cite{bedek2011behavioral} \\
+    \cline{1-1} \cline{4-4}
+    \multirow{4}{*}{Formativo} &  &  & \cite{guenaga2013serious} \\
+    \cline{2-4}
+     & \multirow{3}{2.9cm}{Indicadores de trabajo en VLE} & \multirow{3}{4cm}{Herramienta para el análisis de los registros de aprendizaje} & \multirow{3}{*}{\cite{fidalgo:2015,rayon2014web}} \\
+     &  &  &  \\
+     &  &  &  \\
     \hline
-    \cite{andre2011formal}  & Test psicológico definido por expertos & Pruebas escritas & Test automático \\
-    \hline
-    \cite{guenaga2013serious}  & GBL & Indicadores basados en logros & Juegos serios \\
-    \hline
-    \cite{bedek2011behavioral}  & GBL  & Indicadores basados en logros & Juegos serios  \\
-    \hline
-    \cite{rayon2014web} & Learning Analytics & Indicadores de trabajo en VLE & Herramienta para el análisis de los registros de aprendizaje \\
-    \hline
-    \cite{fidalgo:2015} & Learning Analytics & Indicadores de trabajo en VLE & Herramienta para el análisis de los registros de aprendizaje \\
+    Sumativo & Pruebas escritas & Test automático & \cite{andre2011formal} \\
     \hline
   \end{tabular}
 \end{center}
@@ -754,7 +761,7 @@ En \cite{guenaga2013serious} se utilizan los juegos serios para el desarrollo de
 
 %En~\cite{rayon2014web} se propone la evaluación de varias competencias genéricas mediante indicadores obtenidos del análisis del proceso de aprendizaje. Para ello utilizan una plataforma web llamada LACAMOLC (\emph{Learning Analytics for Competence Assessment of MObile Learning Contexts}), un panel que da soporte a los procesos de aprendizaje y evaluación proporcionando una perspectiva visual del análisis del aprendizaje mediante la recolección de datos sociales y de uso desde diferentes entornos de aprendizaje como Moodle, Google Apps para la educación y MediaWiki. Mediante LACAMOLC el profesor centraliza todos los indicadores para la evaluación de competencias obteniendo una información cuantitativa y visual. Mediante el número de accesos al foro de Moodle o mediante el número de contribuciones en el foro, se evalúan competencias como la \emph{comunicación interpersonal} o las \emph{habilidades de escritura}. También se utilizan indicadores obtenidos de documentos Google (\emph{Google Docs}).
 
-El primer trabajo que encontramos que utiliza los registros de actividad de los entornos de aprendizaje es “A web platform for the assessment of competences in Mobile Learning Contexts” ~\cite{rayon2014web}. En él utilizan LACAMOLC, una plataforma web que aporta información visual e informes con indicadores de competencias genéricas de los estudiantes a partir de los registros de actividad. LACAMOLC está implementado sobre Pentaho. Pentaho es una herramienta de análisis de negocio que recoge datos de las bases de datos de los diferentes orígenes, y que mapeará estos datos con los indicadores de las competencias genéricas. Las competencias que se evalúan y los indicadores que se utilizan son:
+En el primer trabajo en el que se utilizan los registros de actividad de los entornos de aprendizaje~\cite{rayon2014web} se utiliza LACAMOLC, una plataforma web que aporta información visual e informes con indicadores de competencias genéricas de los estudiantes a partir de los registros de actividad. LACAMOLC está implementado sobre Pentaho. Pentaho es una herramienta de análisis de negocio que recoge datos de las bases de datos de los diferentes orígenes, y que mapeará estos datos con los indicadores de las competencias genéricas. Las competencias que se evalúan y los indicadores que se utilizan son:
 
 \begin{itemize}
 \item \emph{Gestión del tiempo}. Indicador: Cumplimiento de la planificación, es decir, número de acciones que se han hecho a tiempo con respecto a la planificación fijada en una hoja de cálculo de Google.
@@ -767,26 +774,27 @@ El primer trabajo que encontramos que utiliza los registros de actividad de los 
 \item \emph{Pensamiento analítico}. Indicador: identificación de errores o falta de coherencia en sus propias ideas, es decir, número de veces que un estudiante releyó sus comentarios.
 \end{itemize}
 
-El segundo trabajo que tenemos es “Using Learning Analytics to improve teamwork assessment”~\cite{fidalgo:2015}. En él se utiliza el método CTMTC (\emph{Comprehensive Training Model of the Teamwork Competence}), un método que integra herramientas que están presentes en diferentes entornos de aprendizaje virtual y que facilita el registro de la interacción de los estudiantes y por tanto un acceso más sencillo a las evidencias del trabajo en equipo. El registro de esta interacción en el foro era una tarea tediosa para ser realizada a mano, por lo que implementaron el \emph{LA system}. \emph{LA system} se implementa como un servicio web en Moodle, de forma que la información sea accesible a través de internet con mensajes basados en XML. Esta información después es consumida por un cliente que proporciona una visión apropiada de los datos. Los indicadores utilizados son:
+En el segundo trabajo que utiliza los registros de aprendizaje~\cite{fidalgo:2015} se utiliza el método CTMTC (\emph{Comprehensive Training Model of the Teamwork Competence}), un método que integra herramientas que están presentes en diferentes entornos de aprendizaje virtual y que facilita el registro de la interacción de los estudiantes y por tanto un acceso más sencillo a las evidencias del trabajo en equipo. El registro de esta interacción en el foro era una tarea tediosa para ser realizada a mano, por lo que implementaron el \emph{LA system}. \emph{LA system} se implementa como un servicio web en Moodle, de forma que la información sea accesible a través de internet con mensajes basados en XML. Esta información después es consumida por un cliente que proporciona una visión apropiada de los datos. Los indicadores utilizados son:
 
 \begin{itemize}
 \item Mensajes escritos en foro: interacción estudiante-estudiante activo.
 \item Mensajes leídos en el foro:  interacciones estudiante-estudiante pasivo.
 \end{itemize}
 
-Ambos trabajos nos proporcionan indicadores de los entornos virtuales de aprendizaje aplicables a varias competencias genéricas. El inconveniente que presentan ambas aproximaciones es que los indicadores son fijos, es decir, el docente no tendria la opción de combinar o buscar otros indicadores en el entorno virtual a parte de los que proporcionan los métodos presentados. Por ejemplo, si en un curso virtual se utilizan los foros con unas reglas de uso diferentes quizás habría que modificar los indicadores o combinarlos de otra manera para que fueran útiles para el profesor de dicho curso virtual. Seria deseable la opción del profesor de poder diseñar sus propias evaluaciones a partir de los indicadores que proporciona el entorno virtual.
+Ambos trabajos nos proporcionan indicadores de los entornos virtuales de aprendizaje aplicables a varias competencias genéricas. El inconveniente que presentan ambas aproximaciones es que los indicadores son fijos, es decir, el docente no tendría la opción de combinar o buscar otros indicadores en el entorno virtual aparte de los que proporcionan los métodos presentados. Por ejemplo, si en un curso virtual se utilizan los foros con unas reglas de uso diferentes quizás habría que modificar los indicadores o combinarlos de otra manera para que fueran útiles para el profesor de dicho curso virtual. Sería deseable la opción del profesor de poder diseñar sus propias evaluaciones a partir de los indicadores que proporciona el entorno virtual.
 
 \pagestyle{empty}
 \begin{landscape}
 \begin{center}
-\begin{longtable}{| c | m{9cm} | m{4cm} | m{2.5cm} | m{3.5cm} |}
+\begin{longtable}{| c | m{8.6cm} | m{3.7cm} | m{3.1cm} | m{3.5cm} |}
     \hline
-    REF & TÍTULO & TIPO DE INVESTIGACIÓN & TIPO DE CONTRIBUCIÓN & ÁMBITO DE LA INVESTIGACIÓN \\
+    \multirow{2}{*}{REF} & \multirow{2}{*}{TÍTULO} &  TIPO DE  &  TIPO DE  &  ÁMBITO DE LA  \\
+     &  &  INVESTIGACIÓN &   CONTRIBUCIÓN &   INVESTIGACIÓN \\
     \hline
     \hline 
     \cite{yang2014fine} & A Fine-Grained Outcome-Based Learning Path Model & proposal of solution & model & Teacher assessment \\
     \hline
-    \cite{rayon2014web} & A web platform for the assessment of competences in Mobile Learning Contexts & validation research & framework & Automated assessment tool \\
+    \cite{rayon2014web} & A web platform for the assessment of competences in Mobile Learning Contexts & validation research & framework & \leftcell{3.8cm}{Automated assessment tool} \\
     \hline
     \cite{martin2013acquired} & Acquired Skills With The Implementation Of New Evaluation Methods At University Rey Juan Carlos & experience paper & model & Teacher assessment \\
     \hline
@@ -796,53 +804,53 @@ Ambos trabajos nos proporcionan indicadores de los entornos virtuales de aprendi
     \hline
     \cite{aziz2007appraisal} & Appraisal of Course Learning Outcomes using Rasch Measurement: A Case Study in Information Technology Education & proposal of solution & model & Teacher assessment \\
     \hline
-    \cite{sevilla2012assessment} & Assessment of competences in designing online preparatory materials for the Cambridge First Certificate in English examination & evaluation research & technique & Peer and self-assessment / Teacher assessment \\
+    \cite{sevilla2012assessment} & Assessment of competences in designing online preparatory materials for the Cambridge First Certificate in English examination & evaluation research & technique & \leftcell{3.8cm}{Peer and self-assessment / Teacher assessment} \\
     \hline
     \cite{vizcarro2013assessment} & Assessment of problem solving in computing studies & experience paper & method & Teacher assessment \\
     \hline
-    \cite{achcaoucaou2014competence} & Competence Assessment in Higher Education: A Dynamic Approach & proposal of solution & tool & Peer and self-assessment \\
+    \cite{achcaoucaou2014competence} & Competence Assessment in Higher Education: A Dynamic Approach & proposal of solution & tool & \leftcell{3.8cm}{Peer and self-assessment} \\
     \hline
     \cite{strijbos2015criteria} & Criteria and standards of generic competences at bachelor degree level: A review study & evaluation research & method & Review study \\
     \hline
     \cite{ward2011developing} & Developing entrepreneurial accounting and finance competency using the ELLEIEC Virtual Centre for Enterprise & experience paper & tool & Teacher assessment \\
     \hline
-    \cite{ficapal2015learning} & e-Learning and Team-based Learning. Practical Experience in Virtual Teams & experience paper & framework & Peer and self-assessment \\
+    \cite{ficapal2015learning} & e-Learning and Team-based Learning. Practical Experience in Virtual Teams & experience paper & framework & \leftcell{3.8cm}{Peer and self-assessment} \\
     \hline
     \cite{rashid2008engineering} & Engineering Students Performance Evaluation of Generic Skills Measurement: ESPEGS Model & validation research & model & Teacher assessment \\
     \hline
     \cite{rodriguez2010portfolio} & e-Portfolio: A tool to assess university students' skills & evaluation research & tool & Teacher assessment \\
     \hline
-    \cite{andre2011formal} & Formal model for assigning human resources to teams in software projects & validation research & model & Automated assessment tool \\
+    \cite{andre2011formal} & Formal model for assigning human resources to teams in software projects & validation research & model & \leftcell{3.8cm}{Automated assessment tool} \\
     \hline
-    \cite{bedek2011behavioral} & From Behavioral Indicators to Contextualized Competence Assessment & proposal of solution & framework & Automated assessment tool \\
+    \cite{bedek2011behavioral} & From Behavioral Indicators to Contextualized Competence Assessment & proposal of solution & framework & \leftcell{3.8cm}{Automated assessment tool} \\
     \hline
-    \cite{oliver2013graduate} & Graduate attributes as a focus for institution-wide curriculum renewal: innovations and challenges & opinion paper & model & Peer and self-assessment \\
+    \cite{oliver2013graduate} & Graduate attributes as a focus for institution-wide curriculum renewal: innovations and challenges & opinion paper & model & \leftcell{3.8cm}{Peer and self-assessment} \\
     \hline
     \cite{serrano2013hiperion} & Hiperion: A fuzzy approach for recommending educational activities based on the acquisition of competences & proposal of solution & tool & Teacher assessment \\
     \hline
-    \cite{chang2009international} & International creative tension study of university students in South Korea and Finland & evaluation research & tool & Peer and self-assessment \\
+    \cite{chang2009international} & International creative tension study of university students in South Korea and Finland & evaluation research & tool & \leftcell{3.8cm}{Peer and self-assessment} \\
     \hline
-    \cite{piedra2010measuring} & Measuring collaboration and creativity skills through rubrics: Experience from UTPL collaborative social networks course & evaluation research & method & Peer and self-assessment / Teacher assessment \\
+    \cite{piedra2010measuring} & Measuring collaboration and creativity skills through rubrics: Experience from UTPL collaborative social networks course & evaluation research & method & \leftcell{3.8cm}{Peer and self-assessment / Teacher assessment} \\
     \hline
-    \cite{lasa2013problem} & Problem Based Learning Implementation In The Degree Of Human Nutrition And Dietetics & experience paper & technique & Peer and self-assessment / Teacher assessment \\
+    \cite{lasa2013problem} & Problem Based Learning Implementation In The Degree Of Human Nutrition And Dietetics & experience paper & technique & \leftcell{3.8cm}{Peer and self-assessment / Teacher assessment} \\
     \hline
-    \cite{arno2011promoting} & Promoting reflection on science, technology, and society among engineering students through an EAP online learning environment & evaluation research & tool & Peer and self-assessment \\
+    \cite{arno2011promoting} & Promoting reflection on science, technology, and society among engineering students through an EAP online learning environment & evaluation research & tool & \leftcell{3.8cm}{Peer and self-assessment} \\
     \hline
-    \cite{masip2013self} & Self-video recording for the integration and assessment of generic competencies & experience paper & technique & Peer and self-assessment \\
+    \cite{masip2013self} & Self-video recording for the integration and assessment of generic competencies & experience paper & technique & \leftcell{3.8cm}{Peer and self-assessment} \\
     \hline
-    \cite{guenaga2013serious} & Serious Games for the Development of Employment Oriented Competences & validation research & tool & Automated assessment tool \\
+    \cite{guenaga2013serious} & Serious Games for the Development of Employment Oriented Competences & validation research & tool & \leftcell{3.8cm}{Automated assessment tool} \\
     \hline
-    \cite{ruizacarate2013soft} & Soft Skills: A Comparative Analysis Between Online and Classroom Teaching & experience paper & method & Peer and self-assessment \\
+    \cite{ruizacarate2013soft} & Soft Skills: A Comparative Analysis Between Online and Classroom Teaching & experience paper & method & \leftcell{3.8cm}{Peer and self-assessment} \\
     \hline
     \cite{starcic2008sustaining} & Sustaining Teacher's Professional Development and Training through Web-Based Communities of Practice & evaluation research & tool & Teacher assessment \\
     \hline
-    \cite{renau2010teaching} & Teaching And Learning Through Projects Using The ICT: Practice Of The English Writing Through Business Documents & experience paper & method & Peer and self-assessment \\
+    \cite{renau2010teaching} & Teaching And Learning Through Projects Using The ICT: Practice Of The English Writing Through Business Documents & experience paper & method & \leftcell{3.8cm}{Peer and self-assessment} \\
     \hline
-    \cite{martinez2014teamwork} & Teamwork competence and academic motivation in computer science engineering studies & validation research & method & Peer and self-assessment \\
+    \cite{martinez2014teamwork} & Teamwork competence and academic motivation in computer science engineering studies & validation research & method & \leftcell{3.8cm}{Peer and self-assessment} \\
     \hline
-    \cite{carreras2013promotion} & The promotion and assessment of generic skills from interdisciplinary teaching teams & experience paper & method & Peer and self-assessment / Teacher assessment \\
+    \cite{carreras2013promotion} & The promotion and assessment of generic skills from interdisciplinary teaching teams & experience paper & method & \leftcell{3.8cm}{Peer and self-assessment / Teacher assessment} \\
     \hline
-    \cite{fidalgo:2015} & Using Learning Analytics to improve teamwork assessment & proposal of solution & technique & Automated assessment tool \\
+    \cite{fidalgo:2015} & Using Learning Analytics to improve teamwork assessment & proposal of solution & technique & \leftcell{3.8cm}{Automated assessment tool} \\
     \hline
 \caption{Distribución de publicaciones por tratamiento del problema}
 \label{tab:ListadoTrabajos}
@@ -851,7 +859,7 @@ Ambos trabajos nos proporcionan indicadores de los entornos virtuales de aprendi
 \end{landscape}
 
 \pagestyle{fancy}
-\section{Respuestas}
+\section{Respuestas a las preguntas de investigación}
 
 En base al estudio mostrado las respuestas a las preguntas de investigación son las siguientes:
 
@@ -926,7 +934,7 @@ La herramienta que más se utiliza tanto en la evaluación del profesor como en 
 
 Dentro de la evaluación automática se seleccionaron 5 trabajos, entre los que se encuentran algunos basados en juegos serios~\cite{djaouti2011classifying,bedek2011behavioral} y otros basados en el análisis de los procesos de aprendizaje~\cite{rayon2014web,fidalgo:2015}.
 
-Puede ver las competencias genéricas evaluadas con cada método en las figuras~\ref{fig:competencias1} y~\ref{fig:competencias2} .
+Pueden verse las competencias genéricas evaluadas con cada método en las figuras~\ref{fig:competencias1} y~\ref{fig:competencias2} .
 
 \pagestyle{empty}
 \begin{landscape}
@@ -951,42 +959,37 @@ Puede ver las competencias genéricas evaluadas con cada método en las figuras~
 
 \paragraph*{Q3. ¿Qué técnicas se utilizan para evaluar competencias genéricas a partir de los registros de actividad de un entorno virtual?}
 
-Dentro de los trabajos que utilizan un método de evaluación automática hay dos trabajos que utilizan los registros de actividad de los entornos virtuales para la evaluación de competencias mediante técnicas de learning analytics~\cite{rayon2014web,fidalgo:2015}. 
+Dentro de los trabajos que realizan una evaluación semiautomática hay dos trabajos que utilizan un método de evaluación formativo a partir de técnicas para la extracción de indicadores de trabajo en el VLE utilizando herramientas para el análisis de los registros de aprendizaje~\cite{rayon2014web,fidalgo:2015}. 
 
-En~\cite{rayon2014web} se utiliza la técnica ETL (Extract, Transform and Load) mediante el uso de la herramienta Pentaho para obtener los registros de actividad de diversos KLT (Knowledge and Learning Technologies) como Moodle, Google Apps for Education, Mediawiki y Edmondo.
+En~\cite{rayon2014web} se utilizan procesos ETL (Extract, Transform and Load) mediante el uso de la herramienta de análisis Pentaho para obtener los registros de actividad de diversos KLT (Knowledge and Learning Technologies) como Moodle, Google Apps for Education, Mediawiki y Edmondo.
 
-En~\cite{fidalgo:2015} se utilizan técnicas de minería de datos (\emph{data mining}) mediante el desarrollo de un servicio web en Moodle que devolviera información almacenada en los registros en la plataforma de aprendizaje.
+En~\cite{fidalgo:2015} se utilizan procesos de minería de datos (\emph{data mining}) mediante el desarrollo de un servicio web en Moodle que devolviera información almacenada en los registros en la plataforma de aprendizaje.
 
 A continuación se muestra un resumen para estos trabajos en el que se muestra las técnicas empleadas, los métodos aplicados y las competencias evaluadas~\ref{tab:CompetenciasMetodosTecnicas}.
 
 \begin{table}
   \begin{center}
-  \begin{tabular}{| c | c | c |}
+  \begin{tabular}{| c | c | c | c |}
     \hline
-     \multirow{2}{*}{\textbf{Competencias}} & \textbf{Métodos} &\textbf{Técnicas} \\
-    \cline{2-3}
-     &  Indicadores de trabajo en VLE & Learning Analytics \\
+     \multirow{4}{*}{\textbf{Competencias}} & \textbf{Métodos} & \textbf{Técnicas} 		& \textbf{Herramientas} \\
+    \cline{2-4}
+     & \multirow{3}{*}{Formativo}  & \multirow{3}{3cm}{Indicadores de trabajo en VLE} & \multirow{3}{3.9cm}{Herramienta para el análisis de los registros de aprendizaje} \\
+     &   								&  															& \\
+     &   								&  															&  \\
     \hline
     \hline
-    \multirow{2}{*}{\emph{Análisis}} & \cite{rayon2014web} & \emph{ETL}  \\
-    \cline{2-3}
-     &  & \emph{Data Mining} \\
-    \hline
-    \multirow{2}{*}{\emph{Comunicación}} & \cite{rayon2014web} & \emph{ETL} \\
-    \cline{2-3}
-     &  & \emph{Data Mining} \\
-    \hline
-    \multirow{2}{*}{\emph{Habilidades interpersonales}} & \cite{rayon2014web} & \emph{ETL} \\
-    \cline{2-3}
-     &  & \emph{Data Mining} \\
-    \hline
-    \multirow{2}{*}{\emph{Planificación}} & \cite{rayon2014web} & \emph{ETL} \\
-    \cline{2-3}
-     &  & \emph{Data Mining} \\
-    \hline
-    \multirow{2}{*}{\emph{Trabajo en equipo}} & \cite{rayon2014web} & \emph{ETL} \\
-    \cline{2-3}
-     & \cite{fidalgo:2015} & \emph{Data Mining} \\
+    \emph{Análisis} & \multicolumn{3}{c|}{ \multirow{6}{*}{\cite{rayon2014web} }}  \\
+    \cline{1-1}
+    \emph{Comunicación} & \multicolumn{3}{c|}{}  \\
+    \cline{1-1}
+    \multirow{2}{3cm}{\emph{\centering Habilidades interpersonales}} & \multicolumn{3}{c|}{} \\
+     & \multicolumn{3}{c|}{} \\
+    \cline{1-1}
+    \emph{Planificación} & \multicolumn{3}{c|}{}  \\
+    \cline{1-1}
+    \multirow{2}{*}{\emph{Trabajo en equipo}} & \multicolumn{3}{c|}{} \\
+    \cline{2-4}
+     & \multicolumn{3}{c|}{\cite{fidalgo:2015}}  \\
     \hline
   \end{tabular}
 \end{center}
@@ -1008,9 +1011,9 @@ En muchos de estos trabajos es el profesor quién realiza la evaluación apoyán
 
 Otros trabajos consisten en la implementación de alguna herramienta online de cuestionarios de personalidad, normalmente diseñados para revelar aspectos del carácter o mecanismos psicológicos de un individuo. El inconveniente es que realizar un cuestionario de este tipo no está al alcance de cualquiera, sino que debe ser realizado por psicólogos. Además, son éstos los que deben diagnosticar o valorar los resultados. Y aunque se trate de automatizar, en ocasiones estos tests suelen contar con preguntas cerradas y abiertas, y en el caso de esta última, volvemos a encontrarnos con problemas de escalabilidad.
 
-Por último nos hemos encontrado con un conjunto de trabajos que automatizan el proceso de evaluación de competencias genéricas. Por un lado nos encontramos con juegos serios, juegos que emulan un caso real profesional y en base al modo de actuar del estudiante obtendrán una puntuación que servirá como medida del desempeño en ciertas competencias genéricas. Estos juegos suelen estar muy enfocados a ciertas competencias y su implementación es costosa. Además, el proceso de extracción de calificaciones no está automatizado ni integrado con las herramientas de evaluación del profesor, por lo que es necesario un procedimiento manual para capturarlas.
+Por último nos hemos encontrado con un conjunto de trabajos que automatizan el proceso de evaluación de competencias genéricas. Por un lado nos encontramos con juegos serios, juegos que emulan un caso real profesional y en base al modo de actuar del estudiante obtendrán una puntuación que servirá como medida del desempeño en ciertas competencias genéricas. Estos juegos suelen estar muy enfocados a ciertas competencias no genéricas y su implementación es costosa. Además, el proceso de extracción de calificaciones no está automatizado ni integrado con las herramientas de evaluación del profesor, por lo que es necesario un procedimiento manual para capturarlas.
 
-Por otro lado nos encontramos con el tipo de trabajo que cubren en mayor medida los objetivos de nuestra investigación. En este conjunto de trabajos se evalúan competencias genéricas a partir de indicadores obtenidos de los registros de los entornos de aprendizaje. En estos trabajos las herramientas proporcionan unos indicadores fijos sobre actividades concretas, pero no dan al docente la opción de decidir fórmulas ni crear sus propias evaluaciones, por lo que es válido para un profesor podría no serlo para otro. Si tuviéramos un método que nos permitiera diseñar evaluaciones podríamos probar diferentes fórmulas para obtener diferentes indicadores del desempeño de los estudiantes en el entorno virtual hasta encontrar aquellos que se adapten a lo que cada profesor considere válido para la evaluación de competencias.
+Por otro lado nos encontramos con el tipo de trabajo que cubren en mayor medida los objetivos de nuestra investigación. En este conjunto de trabajos se evalúan competencias genéricas a partir de indicadores obtenidos de los registros de los entornos de aprendizaje. En estos trabajos las herramientas proporcionan unos indicadores fijos sobre actividades concretas, pero no dan al docente la opción de decidir fórmulas ni crear sus propias evaluaciones, así que lo que es válido para un profesor podría no serlo para otro. Si tuviéramos un método que nos permitiera diseñar evaluaciones podríamos probar diferentes fórmulas para obtener diferentes indicadores del desempeño de los estudiantes en el entorno virtual hasta encontrar aquellos que se adapten a lo que cada profesor considere válido para la evaluación de competencias.
 
 \pagestyle{fancy}
 
