--- a/Latex/Macros/Macros.tex
+++ b/Latex/Macros/Macros.tex
@@ -228,5 +228,10 @@
 		\bigskip
 		\textbf{#1}
 		\smallskip 
+	}
 
+% Celda larga alineada izquierda
+\newcommand{\leftcell}[2]
+	{
+		\parbox[c]{#1}{\raggedright #2}
 	}
